# getauthorizedkeys

./: .gitmodules  CMakeLists.txt  COPYING  config.c  getauthorizedkey.c  getauthorizedkey.h  getauthorizedkeys.c  getauthorizedkeys.h  getauthorizedkeys.ini  getauthorizedkeys.spec  ldap.c
doc/: getauthorizedkeys.1  getauthorizedkeys.ini.5
man/: getauthorizedkeys.1  getauthorizedkeys.ini.5
samples/: getauthorizedkeys.ini
